tweaked for heroku deployment

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,17 @@
+# Django stuff:
+*.log
+local_settings.py
+db.sqlite3
+db.sqlite3-journal
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
 *$py.class
+
+#custom
+venv/
+.vscode/
 
 # C extensions
 *.so
@@ -127,3 +137,4 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
